syntax = "proto3";

package msg;

message BaseMessage
{
	sint32 id = 1;
	bytes data = 2; 
}

message HeartBeatReq
{
	string accountName = 1;
	string password = 2;
}

message HeartBeatRes
{
	bool rs = 1;
}