syntax = "proto3";
import "Common.proto";
package msg;

message LoginReq
{
	string accountName = 1;
	string password = 2;
}

message LoginRes
{
	bool rs = 1;
}

message MatchReq
{
	
}

message MatchRes
{
	repeated PlayerInfo playerInfos = 1;
}

message EndGameReq
{
	
}

message EndGameRes
{
	
}